# mpi-action-framework

./: .astylerc  .clang-format  .gitattributes  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  MakefileFunctions.in  README.md  maf.i
examples/: CMakeLists.txt  hello_world.py
examples/cpp/: Example00HelloWorld.cpp  Example01HelloWorld.cpp  Example02HelloWorld.cpp  Example03AnnoyingContext.cpp
examples/py/: example00_hello_world.py  example01_hello_world.py  example02_hello_world.py  example03_annoying_context.py  example04_compare_to_mpi4py.py
maf/: Context.cpp  Log.cpp  Log.hpp  MafComm.cpp  MafComm.hpp  Mpi.cpp  Mpi.hpp  Version.hpp  __init__.py  actions.py  controllers.py  example.cpp  example.hpp  macros.hpp  shared.py
maf/actions/: AbstractTestAction.hpp  Action.cpp  (+14 more)
src/: CMakeLists.txt
src/maf/: Context.hpp  Log.hpp  maf.hpp.in
src/maf/actions/: AbstractTestAction.cpp  AbstractTestAction.hpp  Action.cpp  Action.hpp  EmptyAction.cpp  EmptyAction.hpp  EndLoopAction.cpp  EndLoopAction.hpp  RevertSplitAction.hpp  SplitMpiAction.cpp
src/maf/communication/: MafComm.cpp  ReadArchive.hpp  Transmittable.cpp  Transmittable.hpp  WriteArchive.cpp  WriteArchive.hpp
src/maf/controllers/: BcastController.hpp  Controller.cpp  ScatterController.cpp  ScatterController.hpp  TestController.cpp
src/maf/exceptions/: Exception.cpp  Exception.hpp
tests/: Example00HelloWorld.cpp  Example01HelloWorld.cpp  Example02HelloWorld.cpp  Example03AnnoyingContext.cpp  Example03ScatterActions.cpp  example00_hello_world.py  example01_hello_world.py  example02_hello_world.py  example03_annoying_context.py  hello_world.py  test.cpp  test.py
(+27 files in other folders)
